[package]
name = "mistral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#accelerate-src = { version = "0.3.2" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokenizers = {version = "0.14.1", default-features = false, features = [
  "onig",
  "http",
]}
#candle-core = { version = "0.3.0", features = ["cuda"], optional = true }
candle-transformers = "0.3.0"
candle-nn = "0.3.0"
hf-hub = "0.3.2"
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.37"
tracing-chrome = "0.7.1" 
tracing-subscriber = "0.3.7"
#cudarc = { version = "0.9.15", features = ["f16"] }

#[target.'cfg(not(feature = "use-cuda"))'.dependencies]
candle-core = { version = "0.3.0" }

#[target.'cfg(feature = "use-cuda")'.dependencies]
#candle-core = { version = "0.3.0", features = ["cuda"] }

[features]
default = []
#accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"] 
